# OtelRust

./: .eslintrc.js  .gitignore  App.tsx  Makefile  app.json  package-lock.json  package.json  tsconfig.json
__tests__/: App.test.tsx
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/otelrust/: MainActivity.kt  MainApplication.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/OtelRust/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/OtelRust.xcodeproj/: project.pbxproj
ios/OtelRust.xcodeproj/xcshareddata/xcschemes/: OtelRust.xcscheme
rust-core/: Cargo.toml  build.rs  cbindgen.toml  rust-toolchain.toml
rust-core/src/: lib.rs
shared/: NativeHelloModule.cpp  NativeHelloModule.h  NativeOTel.cpp  NativeOTel.h
specs/: NativeHelloModule.ts  NativeOTel.ts
